Fix uncovered lines

--- a/ui/pages/confirm-decrypt-message/confirm-decrypt-message.scss
+++ b/ui/pages/confirm-decrypt-message/confirm-decrypt-message.scss
@@ -185,7 +185,6 @@
     overflow-wrap: break-word;
     margin: 20px;
     overflow: hidden;
-    padding: 5px;
     border-radius: 5px;
     position: relative;
     border: 1px solid var(--color-border-muted);
